--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -5,7 +5,7 @@
 
 <form method="post" action="#" id="loginform">
 	<header>
-		<h1><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
+		<h1><img alt="Freeder" src="img/logo_complete.svg"></h1>
 	</header>
 	<div>
 		<input type="text" name="login" id="login" placeholder="Login"/>
