better tag form 7 max-width for the nav bar

--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -13,14 +13,12 @@
 					Read</button>
 				<div class="articleTags">
 					<img class="articleDisplayTagButton" alt="display the tag list" src="img/tag.svg">
-					<div class="articleTagList">
+					<div class="articleTagsList">
 						<ul>
-							<li>tag 1</li>
-							<li>tag 2</li>
-							<li>tag 3</li>
-							<li>tag 4</li>
+							<!-- tag loop here -->
+							<li>test</li>
 						</ul>
-						<form>
+						<form class="articleTagForm">
 							<input type="text" name="newTag" id="newTag" placeholder="Tag…"/>
 							<button>Tagguer</button>
 						</form>
