Add feed_baselink and tag_baselink to handle url rewriting on/off

--- a/tpl/default/_aside.html
+++ b/tpl/default/_aside.html
@@ -16,7 +16,7 @@
 	</ul>
 	<ul id="feedList">
 		{loop="$feeds"}
-		<li><a href="feed/{$value['id']}">{$value['title']}</a></li>
+		<li><a href="{$feed_baselink}{$value['id']}">{$value['title']}</a></li>
 		{/loop}
 	</ul>
 </aside>
