tags are usable by the users :)

--- a/tpl/default/_aside.html
+++ b/tpl/default/_aside.html
@@ -12,11 +12,15 @@
 	</ul>
 	<ul id="tagList">
 		<li>
+			{loop="get_tags(USER_TAGS)"}	
+				<li><a href="{$feed_baselink}{$value['id']}">{$value['title']}</a></li>
+			{/loop}
+
 		</li>
 	</ul>
 	<ul id="feedList">
 		{loop="$feeds"}
-		<li><a href="feed/{$value['id']}">{$value['title']}</a></li>
+		<li><a href="{$feed_baselink}{$value['id']}">{$value['title']}</a></li>
 		{/loop}
 	</ul>
 </aside>
