There was an extra `tag_rewrite` instead of `tag_baselink`, my fault =(

--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -16,7 +16,7 @@
 					<div class="articleTagsList">
 						<ul>
 							{loop="$value['tags']"}
-							<li><a href="{$tag_rewrite}{$value2['name']}">{$value2['name']}</a></li>
+								<li><a href="{$tag_baselink}{$value2['name']}">{$value2['name']}</a></li>
 							{/loop}
 						</ul>
 						<form class="articleTagForm">
