--- a/tpl/default/_sidebar.html
+++ b/tpl/default/_sidebar.html
@@ -5,10 +5,11 @@
 		<h1><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
 	</header>
 	<ul id="menu">
-		<li><a href="index.php">Home</a></li>
-		<li><a href="refresh.php">Refresh!</a></li>
-		<li><a href="settings.php">Settings</a></li>
-		<li><a href="logout.php">Logout</a></li>
+		<li><a href="index.php"><img src="img/home.svg" alt="Home"></a></li>
+		<li><a href="{$tag_baselink}_sticky"><img src="img/stick.svg" alt="Sticky"></a></li>
+		<li><a href="refresh.php"><img src="img/sync.svg" alt="Refresh"></a></li>
+		<li><a href="settings.php"><img src="img/settings.svg" alt="Settings"</a></li>
+		<li><a href="logout.php"><img src="img/off.svg" alt="Logout"></a></li>
 	</ul>
 	<ul id="tagList">
 		<li>
