first version of BEMcss. Pretty nice

--- a/tpl/default/_begin.html
+++ b/tpl/default/_begin.html
@@ -8,6 +8,6 @@
 		{include="_include"}
 	</head>
 	<body>
-		<div id="flex">
+		<div class="flex">
 			{include="_sidebar"}
-			<main>
+			<main class="MainContent">
