--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -19,6 +19,6 @@
 		<input type="checkbox" name="remember" id="remember" class="switch" />
 		<label for="remember">Remember me</label>
 	</div>
-	<input class="red" type="submit"/>
+	<input class="Button" type="submit"/>
 </form>
 {include="_end"}
