--- a/tpl/default/_include.html
+++ b/tpl/default/_include.html
@@ -8,3 +8,5 @@
 <link rel="stylesheet" href="css/footer.css">
 <link rel="stylesheet" href="css/settings.css">
 <link rel="stylesheet" href="css/login.css">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
