Hide buttons when anonymous view
_Note:_ I kept the "Share button" because it relies on external service
and can then be used even in anonymous mode but this can (SHOULD ?) be
debated.

--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -2,11 +2,11 @@
 	{loop="$entries"}
 		<article class="Article">
 			<nav class="Controls">
-				<button class="Controls-button Button red" onclick="ajax(this, 'api/mark_as_read.php?entry={$value['id']}')">Read</button>
-				<button class="Controls-button Button darkgrey" onclick="ajax(this, 'api/tags.php?entry={$value['id']}&amp;tag=_sticky')">Stick</button>
-				<button class="Controls-button Button green" onclick="">Share</button>
-
-
+				{if="!empty($user)"}
+					<button class="Controls-button Button red" onclick="ajax(this, 'api/mark_as_read.php?entry={$value['id']}')">Read</button>
+					<button class="Controls-button Button darkgrey" onclick="ajax(this, 'api/tags.php?entry={$value['id']}&amp;tag=_sticky')">Stick</button>
+					<button class="Controls-button Button green" onclick="">Share</button>
+				{/if}
 
 				<div class="ArticleTags">
 					<img class="DisplayTagsButton" alt="display the tag list" src="img/tag.svg">
