--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -53,6 +53,11 @@
 				<label for="entries_to_keep">Number of entries to keep per feed (0 to keep all entries):</label>
 				<input type="number" name="entries_to_keep" id="entries_to_keep" value="{$config->entries_to_keep}"/>
 			</p>
+
+			<p>
+				<label for="entries_per_page">Entries per page:</label>
+				<input type="number" name="entries_per_page" id="entries_per_page" value="{$config->entries_per_page}"/>
+			</p>
 		</fieldset>
 
 		<fieldset>
