--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -11,7 +11,7 @@
 				<div class="ArticleTags">
 					<img class="displayTagsButton" alt="display the tag list" src="img/tag.svg">
 					<div class="ArticleTagsList">
-						<ul class="Side-tagList TagList">
+						<ul class="Article-tagList TagList">
 							{loop="$value['tags']"}
 								<li class="TagList-completeTag CompleteTag">
 									<a class="TagList-tagName TagName" href="{$tag_baselink}{$value2['name']}">{$value2['name']}</a><a class="TagList-delTag DelTag" href="#">X</a>
