--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -18,10 +18,12 @@
 								</li>
 							{/loop}
 						</ul>
-						<form class="ArticleTagForm">
-							<input class="ArticleTagForm-addTagInput AddTagInput" type="text" name="newTag" id="newTag" placeholder="Tag…"/>
-							<button class="ArticleTagForm-addTagButton AddTagButton Button">Tagguer</button>
+
+						<form class="Article-mainForm MainForm">
+							<input class="MainForm-Input Input" type="text" name="newTag" id="newTag" placeholder="Tag…"/>
+							<button class="MainForm-Submit Submit Button">Tagguer</button>
 						</form>
+
 					</div>
 				</div>
 			</nav>
