--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -14,7 +14,7 @@
 						<ul class="Article-tagList TagList">
 							{loop="$value['tags']"}
 								<li class="TagList-completeTag CompleteTag">
-									<a class="TagList-tagName TagName" href="{$tag_baselink}{$value2['name']}">{$value2['name']}</a><a class="TagList-delTag DelTag" href="#">X</a>
+									<a class="TagList-tagName TagName" href="{$tag_baselink}{$value2['name']}">{$value2['name']}</a>
 								</li>
 							{/loop}
 						</ul>
