Fix small error with latest merge

--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -4,11 +4,11 @@
 			<nav class="Controls">
 				{if="!empty($user)"}
 					{if="!is_read($value)"}
-						<button class="Controls-button Button red" onclick="ajax(this, 'api/mark_as_read.php?entry={$value['id']}')">Read</button>
+						<button class="Controls-button Button red" onclick="read_entry(this, {$value['id']})">Read</button>
 					{else}
-						<button class="Controls-button Button red" onclick="ajax(this, 'api/mark_as_read.php?entry={$value['id']}&amp;unread=1')">Unread</button>
+						<button class="Controls-button Button red" onclick="unread_entry(this, {$value['id']})">Unread</button>
 					{/if}
-					<button class="Controls-button Button darkgrey" onclick="ajax(this, 'api/tags.php?entry={$value['id']}&amp;tag=_sticky')">Stick</button>
+					<button class="Controls-button Button darkgrey" onclick="tag_entry(this, {$value['id']}, '_sticky')">Stick</button>
 					<button class="Controls-button Button green" onclick="">Share</button>
 				{/if}
 
