Fix install template

--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -5,7 +5,7 @@
 
 <form method="post" action="#" class="LoginForm">
 	<header>
-		<h1 class="LoginForm-h1"><img alt="Freeder" src="img/logo_complete.svg"></h1>
+		<h1 class="LoginForm-h1"><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
 	</header>
 	<div>
 		<label for="login" class="hidden" >Login</label>
