--- a/tpl/default/install.html
+++ b/tpl/default/install.html
@@ -1,25 +1,25 @@
 {include="_begin_login"}
-	<form method="post" action="" id="loginform">
+	<form method="post" action="#" class="LoginForm">
 		<header>
-			<h1><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
+			<h1 class="LoginForm-h1"><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
 		</header>
 		<div>
 			<label for="login" class="hidden">Login:</label>
-			<input type="text" name="login" id="login" value="{$login}" placeholder="Login" />
+			<input class="LoginForm-input" type="text" name="login" id="login" value="{$login}" placeholder="Login" />
 		</div>
 		<div>
 			<label for="password" class="hidden">Password:</label>
-			<input type="password" name="password" id="password" placeholder="Password" />
+			<input class="LoginForm-input" type="password" name="password" id="password" placeholder="Password" />
 		</div>
 		<div>
 			<label for="confirm_password" class="hidden">Password:</label>
-			<input type="password" name="confirm_password" id="confirm_password" placeholder="Password (again)" />
+			<input class="LoginForm-input" type="password" name="confirm_password" id="confirm_password" placeholder="Password (again)" />
 		</div>
 		<div>
 			<label for="timezone" class="hidden">Timezone:</label>
-			<input type="text" name="timezone" id="timezone" value="{$timezone}" placeholder="Timezone" />
+			<input class="LoginForm-input" type="text" name="timezone" id="timezone" value="{$timezone}" placeholder="Timezone" />
 		</div>
-		<input class="red" type="submit" value="Install !" />
+		<input class="Button red" type="submit" value="Install !" />
 	</form>
 {include="_end"}
 
