Fix install button in install template

--- a/tpl/default/install.html
+++ b/tpl/default/install.html
@@ -19,7 +19,7 @@
 			<label for="timezone" class="hidden">Timezone:</label>
 			<input class="LoginForm-input" type="text" name="timezone" id="timezone" value="{$timezone}" placeholder="Timezone" />
 		</div>
-		<input class="Button red" type="submit" value="Install !" />
+		<input class="LoginForm-input Button" type="submit" value="Install !" />
 	</form>
 {include="_end"}
 
