Fix problem with tags with spaces, cf issue #25

--- a/tpl/default/_sidebar.html
+++ b/tpl/default/_sidebar.html
@@ -31,7 +31,7 @@
 	<ul class="Side-tagList TagList">
 			{loop="get_tags(USER_TAGS)"}
 				<li class="TagList-completeTag CompleteTag">
-					<a class="TagList-tagName TagName" href="{$tag_baselink}{$value['name']}">{$value['name']}</a>
+					<a class="TagList-tagName TagName" href="{$tag_baselink}{function="tag_encode($value['name'])"}">{$value['name']}</a>
 				</li>
 			{/loop}
 	</ul>
