add modal div and remove @Phyks 's .vimrc :D

--- a/tpl/default/_end.html
+++ b/tpl/default/_end.html
@@ -4,6 +4,7 @@
 			</main>
 		</div> {* end #flex *}
 		{include="_footer"}
+		<div class="modalbox"></div>
 		{include="_include_end"}
 	</body>
 </html>
