--- a/tpl/default/_sidebar.html
+++ b/tpl/default/_sidebar.html
@@ -22,11 +22,11 @@
 		<button class="MainForm-Submit Submit Button"><!--<img src="img/glass.png" alt="Search">-->Search</button>
 	</form>
 
-	{if="!empty($user)"}
-		<button class="Button red" onclick="read_all(this)">Read all</button>
-	{/if}
+	<p class="ItemsNumber">{$nb_entries} item{if="$nb_entries> 1"}s{/if}</p>
 
-	<p id="nbItems">{$nb_entries} item{if="$nb_entries> 1"}s{/if}.</p>
+	{if="!empty($user)"}
+		<button class="Side-button Button red" onclick="read_all(this)">Read all</button>
+	{/if}
 
 	<ul class="Side-tagList TagList">
 			{loop="get_tags(USER_TAGS)"}
@@ -35,6 +35,7 @@
 				</li>
 			{/loop}
 	</ul>
+
 	<!--
 	<ul id="feedList">
 		{loop="$feeds"}
@@ -42,5 +43,6 @@
 		{/loop}
 	</ul>
 	-->
+
 </aside>
 
