--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -34,12 +34,17 @@
 					</div>
 				</div>
 			</nav>
+
 			<div class="ArticleContent">
 				<h1><a href="{function="get_entry_link($value)"}">{$value['title']}</a></h1>
 				<div class="Feed">From <a href="feed/{$entry_feed['id']}">{$entry_feed['title']}</a></div>
 				<div class="Authors">{include="_author"}</div>
 				<div>{$value['displayed_content']}</div>
 			</div>
+
+			<!--
+			**not usable yet**
+			
 			{if="!empty($user) && $config->display_entries == 'content'"}
 				<nav class="Controls">
 					{if="!is_read($value)"}
@@ -51,6 +56,7 @@
 					<button class="Controls-button Button green" onclick="">Share</button>
 				</nav>
 			{/if}
+			-->
 		</article>
 	{/loop}
 	<p>{$nb_pages} pages</p>
