modal box working roughly

--- a/tpl/default/_end.html
+++ b/tpl/default/_end.html
@@ -4,7 +4,8 @@
 			</main>
 		</div> {* end #flex *}
 		{include="_footer"}
-		<div id="JsModalbox" class="Modalbox" class="hidden">
+		<div id="JsOverlay" class="Overlay"></div>
+		<div id="JsModalbox" class="Modalbox">
 			<!-- 
 				* don't fill this code, this is filled js-only ;
 				* Both ID and classes are used, because for JS selection, ID are way faster than classes.
