Fix unclosed img tag in _sidebar

--- a/tpl/default/_sidebar.html
+++ b/tpl/default/_sidebar.html
@@ -10,7 +10,7 @@
 		<li class="Menu-li"><a href="/tag/_sticky"><img src="img/stick.svg" alt="Sticky"></a></li>
 	{if="!empty($user)"}
 		<li class="Menu-li"><a href="refresh.php"><img src="img/sync.svg" alt="Refresh"></a></li>
-		<li class="Menu-li"><a href="settings.php"><img src="img/settings.svg" alt="Settings"</a></li>
+		<li class="Menu-li"><a href="settings.php"><img src="img/settings.svg" alt="Settings"></a></li>
 		<li class="Menu-li"><a href="logout.php"><img src="img/off.svg" alt="Logout"></a></li>
 	{else}
 		<li><a href="login.php">Login</a></li>
