--- a/tpl/default/_author.html
+++ b/tpl/default/_author.html
@@ -1,8 +1,8 @@
 {if="!empty($value['authors'])"}
 	Edited by
 	{loop="$value['authors']"}
-		{if="!empty($value1['url'])"}
-			<a href="{$value1['url']}">{$value1['name']}</a>
+		{if="!empty($value1['uri'])"}
+			<a href="{$value1['uri']}">{$value1['name']}</a>
 		{elseif="!empty($value1['email'])"}
 			<a href="mailto:{$value1['email']}">{$value1['name']}</a>
 		{elseif="!empty($value1['name'])"}
