--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -29,9 +29,9 @@
 						</ul>
 
 						{if="!empty($user)"}
-							<form class="Article-mainForm MainForm">
+							<form class="Article-mainForm MainForm" action="#" onsubmit="return tag_form(this, {$value['id']}, '/tag/');">
 								<input class="MainForm-Input Input" type="text" name="newTag" id="newTag" placeholder="Tag…"/>
-								<button class="MainForm-Submit Submit Button" onclick="tag(this, {$value['id']}, '/tag/');">Tagguer</button>
+								<button class="MainForm-Submit Submit Button">Tag</button>
 							</form>
 
 						{/if}
