--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -40,7 +40,7 @@
 			</nav>
 
 			<div class="ArticleContent">
-				<h1><a href="{function="get_entry_link($value)"}">{$value['title']}</a></h1> 
+				<h1><a href="{function="get_entry_link($value)"}">{$value['title']}</a></h1>
 				<div class="Feed">From <a href="feed/{$entry_feed['id']}">{$entry_feed['title']}</a></div>
 				<div class="Authors">{include="_author"}</div>
 				<div>{$value['displayed_content']}</div>
@@ -51,7 +51,7 @@
 
 			{if="!empty($user) && $config->display_entries == 'content'"}
 				<nav class="Controls">
-					{if="!is_read($value)"}
+					{if="!is_tag('read_', $value)"}
 						<button class="Controls-button Button red" onclick="read_entry(this, {$value['id']})">Read</button>
 					{else}
 						<button class="Controls-button Button red" onclick="unread_entry(this, {$value['id']})">Unread</button>
