Edit password in settings

--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -38,7 +38,9 @@
 
 		<fieldset>
 			<legend>User</legend>
-			{* TODO *}
+			<p>Leave these fields blank if you don't want to change your password.</p>
+			<p><label for="password">Password: </label><input type="password" name="password" id="password"/></p>
+			<p><label for="password_check">Password (confirmation): </label><input type="password" name="password_check" id="password_check"/></p>
 		</fieldset>
 
 		<fieldset>
